@startuml
class Game {
{method} play
}

class Player {
  {method} makeMove
}

class Board {
{method} applyMove
{method} isEnded
{method} getWinner
}

class Move 

class Mark

Game --> "2" Player
Game --> Board
Player .left.> Board
Player ..> Move
Board ..> Move
Board -down-> "*" Mark
Player --> Mark


@enduml
